--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "github:SubZtep/secretsmanager-local",
   "bugs": "https://github.com/SubZtep/secretsmanager-local/issues",
   "license": "Unlicense",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "build": "docker build -t subztep/secretsmanager-local:0.1.1 .",
+    "build": "docker build -t subztep/secretsmanager-local:0.1.2 . && docker tag subztep/secretsmanager-local:0.1.2 subztep/secretsmanager-local:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
