--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "start": "node index.js",
     "build": "docker build -t subztep/secretsmanager-local:0.1.2 . && docker tag subztep/secretsmanager-local:0.1.2 subztep/secretsmanager-local:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=16 <19"
   }
 }
