--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "github:SubZtep/secretsmanager-local",
   "bugs": "https://github.com/SubZtep/secretsmanager-local/issues",
   "license": "Unlicense",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "cross-env HEALTHY_TIMEOUT=3 SERVER_PORT=7000 SECRET_NAME=TestKeyFromTheMock SECRET_STRING={hello:123456} SECRET_VERSION_ID=1.0 SECRET_ARN=arn:aws:iam:mock npm start",
+    "dev": "cross-env HEALTHY_TIMEOUT=3 SERVER_PORT=7000 SECRET_NAME=TestKeyFromTheMock SECRET_STRING={} SECRET_VERSION_ID=1.0 SECRET_ARN=arn:aws:iam:mock npm start",
     "build": "zx builder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
